--- a/MengaJavier-Desafio4/package.json
+++ b/MengaJavier-Desafio4/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "mengajavier-desafio4",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3"
-  }
+    "name": "mengajavier-desafio4",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.2",
+        "express": "^4.17.3",
+        "multer": "^1.4.4"
+    }
 }
