--- a/MengaJavier-Desafio8/package.json
+++ b/MengaJavier-Desafio8/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "ejs": "^3.1.7",
         "express": "^4.18.1",
+        "faker": "^6.6.6",
         "knex": "^2.0.0",
         "mysql": "^2.18.1",
         "socket.io": "^4.5.0",
