--- a/MengaJavier-Desafio10/package.json
+++ b/MengaJavier-Desafio10/package.json
@@ -16,6 +16,7 @@
         "knex": "^2.0.0",
         "mongoose": "^6.3.8",
         "mysql": "^2.18.1",
+        "normalizr": "^3.6.2",
         "socket.io": "^4.5.0",
         "sqlite3": "^5.0.8"
     }
